# ai-deepresearch-flow

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  README_ZH.md  config.example.toml  hello.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  push-to-pypi.yml
frontend/: .gitignore  components.json  components.local.json  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/src/__tests__/: useFacetStats.test.ts  usePaperDetail.test.ts  useSearchState.test.ts  useSplitView.test.ts
frontend/src/components/: ErrorBoundary.vue  MarkdownContent.vue  MarkdownPanel.vue  PdfViewer.vue  RenderedMarkdown.vue  SummaryPanel.vue
frontend/src/composables/: useExpandableSummary.ts  useFacetStats.ts  usePaperDetail.ts  useSearch.ts  useSplitView.ts  useTheme.ts
frontend/src/lib/: api.ts  charts.ts  config.ts  lazy.ts  markdown-enhance.ts  markdown-normalize.ts  markdown.ts  outline.ts  query-client.ts  selection-db.ts  snippet.ts  static-base.ts
frontend/src/router/: index.ts
frontend/src/stores/: runtime-config.ts  selection.ts  ui.ts
frontend/src/types/: api.ts  cherry-markdown.d.ts  lazy.d.ts  markdown-it-plugins.d.ts  vue-virtual-scroller.d.ts
frontend/src/views/: FacetStatsView.vue  HelpView.vue  PaperDetailView.vue  SearchView.vue  SelectedView.vue  StatsView.vue
openspec/: project.md
openspec/changes/add-custom-template-workflows/: design.md  proposal.md  tasks.md
openspec/changes/add-db-compare/: design.md  proposal.md  tasks.md
python/deepresearch_flow/: __init__.py  cli.py
scripts/docker/: Dockerfile.base  Dockerfile.deploy  docker-compose.example.yml  nginx.conf.prefix.template  nginx.conf.root.template  start-api.sh  start-nginx.sh  supervisord.conf
(+296 files in other folders)
