[project]
name = "ai-deepresearch-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "dashscope>=1.20.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "jsonschema>=4.21.1",
]

[project.scripts]
deepresearch-flow = "deepresearch_flow.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
"deepresearch_flow.paper.schemas" = ["*.json"]
"deepresearch_flow.paper.templates" = ["*.j2"]
