[project]
name = "ai-deepresearch-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.28.0",
    "click>=8.1.7",
    "coloredlogs>=15.0.1",
    "dashscope>=1.20.0",
    "google-auth>=2.0.0",
    "google-genai>=0.5.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.3",
    "json-repair>=0.31.0",
    "jsonschema>=4.21.1",
    "markdown-it-py>=3.0.0",
    "pybtex>=0.24.0",
    "rich>=13.7.1",
    "starlette>=0.37.2",
    "tqdm>=4.66.4",
    "uvicorn>=0.27.1",
]

[project.scripts]
deepresearch-flow = "deepresearch_flow.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.package-data]
"deepresearch_flow.paper.schemas" = ["*.json"]
"deepresearch_flow.paper.templates" = ["*.j2"]
"deepresearch_flow.paper.prompt_templates" = ["*.j2"]
"deepresearch_flow.paper.examples" = ["*.toml"]
"deepresearch_flow.paper.web" = ["pdfjs/**/*"]
